<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:background="@drawable/app_background_card"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/appBarConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/previousButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_baseline_menu_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/profileImageButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/patrick_hand"
                android:text="@string/home_page_title"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    app:cardBackgroundColor="@color/open_grey"
                    app:cardCornerRadius="15dp">

                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:queryHint="Select" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/app_red"
                    android:clickable="true"
                    android:padding="8dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/filterImageButton"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:src="@drawable/ic_baseline_filter_list_24" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/patrick_hand"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                android:text="@string/home_restaurants_title"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/restaurantRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/patrick_hand"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                android:text="@string/home_cuisine_title"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cuisineRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
